// Copyright (c) 2023-present Hutech University. All rights reserved
// Licensed under the MIT License

syntax = "proto3";

package user.test;

message Id {
  string id = 1;
}

message Criteria {
	int32 page = 1;
	int64 limit = 2;
	SortBy sort = 3;
	string orderBy = 4;
}

message User {
  string name = 1;
  string email = 2;
  string phone = 3;
  string card = 4;
  string address = 5;
  string password = 6;
}

message UserCreateRequest {
  User user = 1;
  string repassword = 2;
}

message UserResponse {
	Id id = 1;
 	User user = 2;
}

message UserUpdateRequest {
	Id id = 1;
  User user = 2;
  string repassword = 3;
}

message EmailRequest {
	string email = 1;
}

enum SortBy {
	ASC = 0;
	DESC = 1;
}

service UserService {
	rpc GetUser(EmailRequest) returns (UserResponse) {}
	rpc DeleteUser(Id) returns (UserResponse) {}
	rpc AddUser(UserCreateRequest) returns (UserResponse) {}
	rpc GetUsers(Criteria) returns (stream UserResponse) {}
	rpc UpdateUser(UserUpdateRequest) returns (UserResponse) {}
}